@@ -22,6 +22,7 @@
  * Removed deprecated Domain,DomainImplementation::numericallyContains, isEmpty, isNumericallyEmpty, getVolume, getNumericalVolume, computeVolume
  * Removed deprecated Domain,DomainImplementation::getLowerBound, getUpperBound methods
  * Removed deprecated Interval,Mesh::computeVolume in 1.12
+ * Removed deprecated SobolIndicesAlgorithm::[sg]etBootstrapConfidenceLevel
 
 === Python module ===
 
